--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body style="margin: 0px; padding: 0px;">
+<body>
     <header></header>
     <footer>Best School</footer>
 </body>
